# electricity-cost-dkk

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/electricity_cost_dkk/: __init__.py  app.py  eloverblik.py  errors.py  nordpool.py
